{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 81,
  "lineage": "8bfd5987-157f-52f3-1934-a49c4891e091",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "workload_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376337229415:security-group/sg-048d64314bdae5e24",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-048d64314bdae5e24",
            "name": "default",
            "region": "us-east-1",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05c7628a7a70e7e0f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376337229415:vpc/vpc-05c7628a7a70e7e0f",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-006b60c536b827041",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-7e9cbb1a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "project-vpc"
                ]
              }
            ],
            "id": "vpc-05c7628a7a70e7e0f",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-08783759aa651a78b",
            "ipv6_cidr_block": "2600:1f18:42b4:a300::/56",
            "main_route_table_id": "rtb-02ac9401349996d38",
            "owner_id": "376337229415",
            "region": "us-east-1",
            "tags": {
              "Name": "project-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.aurora_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376337229415:security-group/sg-06c09c94dd6d88209",
            "description": "Control traffic to/from RDS Aurora litellm-aurora-postgresql",
            "egress": [],
            "id": "sg-06c09c94dd6d88209",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "litellm-aurora-postgresql-20260106034038728500000003",
            "name_prefix": "litellm-aurora-postgresql-",
            "owner_id": "376337229415",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "litellm-aurora-postgresql",
              "Project": "litellm-demo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "litellm-aurora-postgresql",
              "Project": "litellm-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c7628a7a70e7e0f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376337229415",
            "id": "sg-06c09c94dd6d88209",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aurora_db",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aurora_db",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc_ingress",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376337229415:security-group-rule/sgr-0a721ebcaca8ca22c",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-0a721ebcaca8ca22c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-06c09c94dd6d88209",
            "security_group_rule_id": "sgr-0a721ebcaca8ca22c",
            "tags": {
              "Environment": "dev",
              "Name": "litellm-aurora-postgresql-vpc_ingress",
              "Project": "litellm-demo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "litellm-aurora-postgresql-vpc_ingress",
              "Project": "litellm-demo"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376337229415",
            "id": "sgr-0a721ebcaca8ca22c",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.main",
            "module.aurora_db.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.bedrock",
      "mode": "data",
      "type": "aws_vpc_endpoint",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.bedrock",
      "mode": "data",
      "type": "aws_vpc_endpoint",
      "name": "existing_bedrock_runtime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.bedrock",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bedrock_agentruntime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376337229415:vpc-endpoint/vpce-055732d405887e33c",
            "dns_entry": [
              {
                "dns_name": "vpce-055732d405887e33c-myticma8.bedrock-agent-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-055732d405887e33c-myticma8-us-east-1a.bedrock-agent-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-055732d405887e33c-myticma8-us-east-1b.bedrock-agent-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "bedrock-agent-runtime.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05035115Z4KRGBRAXCU"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-055732d405887e33c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05ee1ad53cc2d5fec",
              "eni-0c7430813a4cb4cce"
            ],
            "owner_id": "376337229415",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-048d64314bdae5e24"
            ],
            "service_name": "com.amazonaws.us-east-1.bedrock-agent-runtime",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.130.204",
                "subnet_id": "subnet-0b84a76c5e30c472a"
              },
              {
                "ipv4": "10.0.151.197",
                "subnet_id": "subnet-0d52c6f2a1e754f4e"
              }
            ],
            "subnet_ids": [
              "subnet-0b84a76c5e30c472a",
              "subnet-0d52c6f2a1e754f4e"
            ],
            "tags": {
              "Name": "bedrock-agent-endpoint"
            },
            "tags_all": {
              "Name": "bedrock-agent-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05c7628a7a70e7e0f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376337229415",
            "id": "vpce-055732d405887e33c",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_security_group.workload_security_group",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.main",
            "module.bedrock.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.bedrock",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bedrock_runtime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376337229415:vpc-endpoint/vpce-0ec7bea0f7a97c90b",
            "dns_entry": [
              {
                "dns_name": "vpce-0ec7bea0f7a97c90b-dfo43578.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ec7bea0f7a97c90b-dfo43578-us-east-1a.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ec7bea0f7a97c90b-dfo43578-us-east-1b.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "bedrock-runtime.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0335068130H05UUZJL20"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ec7bea0f7a97c90b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01adc3e78f67d5811",
              "eni-0fed754f9256fad1c"
            ],
            "owner_id": "376337229415",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-048d64314bdae5e24"
            ],
            "service_name": "com.amazonaws.us-east-1.bedrock-runtime",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.136.84",
                "subnet_id": "subnet-0b84a76c5e30c472a"
              },
              {
                "ipv4": "10.0.157.123",
                "subnet_id": "subnet-0d52c6f2a1e754f4e"
              }
            ],
            "subnet_ids": [
              "subnet-0b84a76c5e30c472a",
              "subnet-0d52c6f2a1e754f4e"
            ],
            "tags": {
              "Name": "bedrock_runtime_endpoint"
            },
            "tags_all": {
              "Name": "bedrock_runtime_endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05c7628a7a70e7e0f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376337229415",
            "id": "vpce-0ec7bea0f7a97c90b",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_security_group.workload_security_group",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.main",
            "module.bedrock.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376337229415:security-group/sg-0a2e1d2c3ff18cf37",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a2e1d2c3ff18cf37",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "VPC traffic",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "litellm-valkey-20260106034037815200000001",
            "name_prefix": "litellm-valkey-",
            "owner_id": "376337229415",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "litellm-demo",
              "terraform-aws-modules": "elasticache"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "litellm-demo",
              "terraform-aws-modules": "elasticache"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c7628a7a70e7e0f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376337229415",
            "id": "sg-0a2e1d2c3ff18cf37",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376337229415:security-group-rule/sgr-0f1e3932009e52c40",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "VPC traffic",
            "from_port": 6379,
            "id": "sgr-0f1e3932009e52c40",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a2e1d2c3ff18cf37",
            "security_group_rule_id": "sgr-0f1e3932009e52c40",
            "tags": {
              "Environment": "dev",
              "Project": "litellm-demo",
              "terraform-aws-modules": "elasticache"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "litellm-demo",
              "terraform-aws-modules": "elasticache"
            },
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376337229415",
            "id": "sgr-0f1e3932009e52c40",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.main",
            "module.elasticache.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer_litellm",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376337229415:targetgroup/litellm-target-group/9c3d8c8066197273",
            "arn_suffix": "targetgroup/litellm-target-group/9c3d8c8066197273",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,403",
                "path": "/health/liveliness",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:376337229415:targetgroup/litellm-target-group/9c3d8c8066197273",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:376337229415:loadbalancer/app/litellm/53b7fd6e9abf1fbe"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "litellm-target-group",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05c7628a7a70e7e0f"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376337229415:targetgroup/litellm-target-group/9c3d8c8066197273"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer_litellm.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376337229415:loadbalancer/app/litellm/53b7fd6e9abf1fbe",
            "arn_suffix": "app/litellm/53b7fd6e9abf1fbe",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-litellm-1915701886.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:376337229415:loadbalancer/app/litellm/53b7fd6e9abf1fbe",
            "idle_timeout": 90,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "litellm",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-048d64314bdae5e24"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04fd3ba1aa9d56cb0"
              },
              {
                "subnet_id": "subnet-0e165015f85692b36"
              }
            ],
            "subnets": [
              "subnet-04fd3ba1aa9d56cb0",
              "subnet-0e165015f85692b36"
            ],
            "vpc_id": "vpc-05c7628a7a70e7e0f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376337229415:loadbalancer/app/litellm/53b7fd6e9abf1fbe"
          },
          "dependencies": [
            "data.aws_security_group.workload_security_group",
            "data.aws_subnets.public_subnets",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer_litellm.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376337229415:listener/app/litellm/53b7fd6e9abf1fbe/7e73dc63dafe8642",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:376337229415:targetgroup/litellm-target-group/9c3d8c8066197273",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:376337229415:listener/app/litellm/53b7fd6e9abf1fbe/7e73dc63dafe8642",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:376337229415:loadbalancer/app/litellm/53b7fd6e9abf1fbe",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376337229415:listener/app/litellm/53b7fd6e9abf1fbe/7e73dc63dafe8642"
          },
          "dependencies": [
            "data.aws_security_group.workload_security_group",
            "data.aws_subnets.public_subnets",
            "data.aws_vpc.main",
            "module.load_balancer_litellm.aws_lb_target_group.ip",
            "module.load_balancer_litellm.module.load_balancer.aws_lb.internal"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer_litellm.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376337229415:listener/app/litellm/53b7fd6e9abf1fbe/f3c468da5719a503",
            "certificate_arn": "arn:aws:acm:us-east-1:376337229415:certificate/a41b4d28-289d-4c67-9294-37428c1f3e8d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:376337229415:targetgroup/litellm-target-group/9c3d8c8066197273",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:376337229415:listener/app/litellm/53b7fd6e9abf1fbe/f3c468da5719a503",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:376337229415:loadbalancer/app/litellm/53b7fd6e9abf1fbe",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-Res-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:376337229415:listener/app/litellm/53b7fd6e9abf1fbe/f3c468da5719a503"
          },
          "dependencies": [
            "aws_acm_certificate.self_signed",
            "data.aws_security_group.workload_security_group",
            "data.aws_subnets.public_subnets",
            "data.aws_vpc.main",
            "module.load_balancer_litellm.aws_lb_target_group.ip",
            "module.load_balancer_litellm.module.load_balancer.aws_lb.internal",
            "module.load_balancer_litellm.module.load_balancer.aws_lb_trust_store.this",
            "tls_private_key.self_signed",
            "tls_self_signed_cert.self_signed"
          ]
        }
      ]
    }
  ]
}